--- a/styles/styles.css
+++ b/styles/styles.css
@@ -589,7 +589,7 @@ section {
 .portfolios {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[3];
+  grid-template-columns: repeat(3, 1fr);
       grid-template-columns: repeat(3, 1fr);
   grid-gap: 2rem;
   margin-top: 3rem;
@@ -696,9 +696,9 @@ section {
 
 .blogs {
   display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
+  display: "grid";
+  grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr);
   grid-gap: 2rem;
   margin-top: 3rem;
 }
